Report/report_book/_build/html/reports/Reproducible_Report.log
Traceback (most recent call last):
  File "/Users/billydodds/.pyenv/versions/3.8.3/envs/phys/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/billydodds/.pyenv/versions/3.8.3/envs/phys/lib/python3.8/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/billydodds/.pyenv/versions/3.8.3/envs/phys/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/billydodds/.pyenv/versions/3.8.3/envs/phys/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/billydodds/.pyenv/versions/3.8.3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/billydodds/.pyenv/versions/3.8.3/envs/phys/lib/python3.8/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/Users/billydodds/.pyenv/versions/3.8.3/envs/phys/lib/python3.8/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/billydodds/.pyenv/versions/3.8.3/envs/phys/lib/python3.8/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
output_filename_event_det_opt = OUT_PATH + "event_detection_optimisation.csv"

granularity = 100
open(output_filename_event_det_opt, 'w').close()    # Clears the file so that the code can be run again.
for i, x in enumerate(np.linspace(100, 10000, granularity)):
    x = int(x)
    if i%10 == 0:
        print(f"{i} of {granularity})
    contrast_all_files(
        output_filename_event_det_opt, 
        window_size = x, 
        test_stat_fns = tfn_candidates.values(),
        samprate = samprate,
        waves = waves,
        labels = labels,
        step = 0.1,
        contrast_fn = contrast,
        time_buffers = time_buffers_whole
    )
------------------

[0;36m  File [0;32m"<ipython-input-10-e4c685c27f29>"[0;36m, line [0;32m8[0m
[0;31m    print(f"{i} of {granularity})[0m
[0m                                 ^[0m
[0;31mSyntaxError[0m[0;31m:[0m EOL while scanning string literal

SyntaxError: EOL while scanning string literal (<ipython-input-10-e4c685c27f29>, line 8)

